--- a/index.html
+++ b/index.html
@@ -3,48 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Ads</title>
+    <meta name="description" content="Sprouty Notion Ads">
+    <title>Sprouty Notion Ads</title>
     <style>
-        body {
+        * {
             margin: 0;
             padding: 0;
-            background: transparent;
+            box-sizing: border-box;
+        }
+        body {
+            background: #f5f5f5;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            margin: 0;
         }
         .ad-container {
             width: 100%;
             max-width: 728px;
             margin: 0 auto;
+            padding: 20px;
             text-align: center;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-        /* Адаптивный дизайн для мобильных */
+        .loading-indicator {
+            padding: 20px;
+            color: #666;
+            font-size: 14px;
+        }
+        /* Адаптивный дизайн для мобильных устройств */
         @media (max-width: 768px) {
             .ad-container {
                 max-width: 320px;
             }
         }
+        /* Скрытие лейбла "Реклама" от Google (если нужно) */
+        .ad-label {
+            font-size: 10px;
+            color: transparent;
+            height: 0;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
     <div class="ad-container">
-        <!-- Замените ca-pub-XXXXXXXXXX на ваш Publisher ID -->
-        <!-- Замените XXXXXXXXXX на ваш Ad Slot ID -->
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXX"
+        <!-- Sprouty-notion-ads-mvp -->
+        <div class="loading-indicator" id="loading">
+            Загрузка рекламы...
+        </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9713146239394412"
              crossorigin="anonymous"></script>
-        <!-- Пример рекламного блока - Banner -->
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-XXXXXXXXXX"
-             data-ad-slot="XXXXXXXXXX"
+             data-ad-client="ca-pub-9713146239394412"
+             data-ad-slot="5332878453"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
+             
+             // Скрываем индикатор загрузки через несколько секунд
+             window.addEventListener('load', function() {
+                 setTimeout(function() {
+                     var loading = document.getElementById('loading');
+                     if (loading) {
+                         loading.style.display = 'none';
+                     }
+                 }, 2000);
+             });
         </script>
     </div>
 </body>
 </html>
+
 
